--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,9 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+#PSoC Creator auto-generated files
+codegentemp/
+CortexM0/
+Export/
+Cenerated_Source/
